feat: setup app-web

--- a/package.json
+++ b/package.json
@@ -9,19 +9,29 @@
   },
   "private": true,
   "dependencies": {
+    "core-js": "^3.6.5",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-is": "18.2.0",
     "react-native": "0.70.1",
+    "react-router-dom": "6.4.1",
+    "regenerator-runtime": "0.13.7",
+    "styled-components": "5.3.5",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@nrwl/cli": "15.2.1",
+    "@nrwl/cypress": "15.2.1",
     "@nrwl/detox": "15.2.1",
+    "@nrwl/esbuild": "15.2.1",
     "@nrwl/eslint-plugin-nx": "15.2.1",
     "@nrwl/jest": "15.2.1",
     "@nrwl/linter": "15.2.1",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "15.2.1",
     "@nrwl/react-native": "15.2.1",
     "@nrwl/web": "15.2.1",
+    "@nrwl/webpack": "15.2.1",
     "@nrwl/workspace": "15.2.1",
     "@react-native-async-storage/async-storage": "1.17.10",
     "@react-native-community/cli": "9.1.1",
@@ -29,17 +39,26 @@
     "@react-native-community/cli-platform-ios": "9.1.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/jest-native": "4.0.13",
+    "@testing-library/react": "13.4.0",
     "@testing-library/react-native": "11.2.0",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@types/node": "18.7.18",
     "@types/react": "18.0.20",
+    "@types/react-dom": "18.0.6",
+    "@types/react-is": "17.0.3",
     "@types/react-native": "0.70.4",
+    "@types/react-router-dom": "5.3.3",
+    "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
+    "babel-plugin-styled-components": "1.10.7",
+    "cypress": "^11.0.0",
     "detox": "19.12.5",
+    "esbuild": "^0.15.7",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.8",
